Refactor code for better readability and consistency
Made several changes across multiple files to improve code consistency, readability, and adherence to Java coding conventions. This includes adjusting the spacing and alignment of the code, removing unnecessary import statements, and ensuring proper use of newlines for clarity.